--- a/web-test.html
+++ b/web-test.html
@@ -32,7 +32,8 @@ TODO Add new content as needed
 </ul></li>
 <li><a href="#installation">Installation</a>
 <ul>
-<li><a href="#installing-on-linux">Installing on Linux</a></li>
+<li><a href="#installing-on-fedora-and-other-red-hat-derivatives">Installing on Fedora and other Red Hat derivatives</a></li>
+<li><a href="#installing-on-ubuntu-and-other-debian-derivatives">Installing on Ubuntu and other Debian derivatives</a></li>
 <li><a href="#installing-on-windows">Installing on Windows</a></li>
 </ul></li>
 <li><a href="#quickstart">Quickstart</a>
@@ -95,21 +96,63 @@ TODO Add new content as needed
 </ul>
 <hr />
 <h1 id="introduction">Introduction</h1>
-<p>Cherrytree is a free and open source, hierarchal, note-taking application. It is capable of storing text, images, files, links, tables, and executable snippets of code. This application is under active development. Details regarding updates can be found in the <a href="https://github.com/giuspen/cherrytree/blob/master/changelog.txt">changelog</a>.</p>
+<p>Cherrytree is a free and open source, hierarchical, note-taking application. It is capable of storing text, images, files, links, tables, and executable snippets of code. This application is under active development. Details regarding updates can be found in the <a href="https://github.com/giuspen/cherrytree/blob/master/changelog.txt">changelog</a>.</p>
 <h3 id="about-this-manual">About This Manual</h3>
 <p>This manual was written for Cherrytree version 0.38.6. Please check the <a href="http://www.giuspen.com/cherrytree/">Cherrytree website</a> for the latest version.</p>
 <h3 id="get-involved">Get Involved</h3>
 <p><strong>Developers</strong></p>
+<p>The git repository can be found <a href="https://github.com/giuspen/cherrytree">here</a>.</p>
+<p>The current version requires:</p>
+<ul>
+<li>python2</li>
+<li>python-gtk2</li>
+<li>python-gtksourceview2</li>
+<li>p7zip-full</li>
+<li>python-dbus</li>
+<li>python-enchant</li>
+<li>python-chardet</li>
+</ul>
+<p>After cloning, run in the top folder ./cherrytree or python2 cherrytree.</p>
+<p>Development is currently focused on porting from Python to C++/GTKmm, on the master branch within the ‘future’ directory. The latest, stable python release can also be found on the master branch. The pygi branch is a discontinued attempt to port to the python bindings for GTK3. It failed due to python-gtksourceview2 being deprecated. Please port to PyGI.</p>
 <p><strong>Writers</strong></p>
 <p><strong>Translators</strong></p>
 <p><strong>Donations</strong></p>
+<p>Donations are appreciated and can be made from the <a href="https://www.giuspen.com/cherrytree/#text-3">Cherrytree homepage</a>.</p>
+<p><a href="#supporters">Cherrytree Supporters</a></p>
 <hr />
 <h1 id="installation">Installation</h1>
-<p>Navigate to the <a href="https://www.giuspen.com/cherrytree/#downl">downloads webpage</a> and choose an installer. If you don’t know which one to choose, download the .rpm version for Red Hat Linux (Fedora, CentOS), .deb for Debian Linux (Ubuntu, Linux Mint, Debian, etc.), or .exe for Windows.</p>
-<h3 id="installing-on-linux">Installing on Linux</h3>
-<p>Content</p>
+<p>Cherrytree is available for Linux and Windows.</p>
+<h3 id="installing-on-fedora-and-other-red-hat-derivatives">Installing on Fedora and other Red Hat derivatives</h3>
+<ol type="1">
+<li>Download the latest installer with a ‘.rpm’ extension from the <a href="https://www.giuspen.com/cherrytree/#downl">downloads webpage</a>.</li>
+<li>Open a terminal and navigate to the directory where your installer is located.</li>
+<li>Type the following command, replacing “cherrytree.rpm” with the name of your installation file: <code>sudo rpm -Uvh --force cherrytree.rpm</code>. Provide your password when prompted to begin the installation. <img src="src/images/rhinstall.png" /></li>
+</ol>
+<h3 id="installing-on-ubuntu-and-other-debian-derivatives">Installing on Ubuntu and other Debian derivatives</h3>
+<p><strong><em>Option One: Ubuntu Software</em></strong></p>
+<p>Cherrytree can be found in the Ubuntu Software library. Open Ubuntu Software and search for Cherrytree, then select the application and click ‘install’. Provide your password when prompted to begin the installation.</p>
+<p><img src="src/images/ubuntuinstall.png" /></p>
+<p><strong>Option Two: Command Line</strong></p>
+<ol type="1">
+<li>Download the latest installer with a ‘.deb’ extension from the <a href="https://www.giuspen.com/cherrytree/#downl">downloads webpage</a>.</li>
+<li>Open a terminal and navigate to the directory where your installer is located.</li>
+<li>Type the following command, replacing “cherrytree.deb” with the name of your installation file: <code>sudo dpkg -i cherrytree.deb</code>. Provide your password when prompted to begin the installation. <img src="src/images/debinstall.png" /></li>
+</ol>
 <h3 id="installing-on-windows">Installing on Windows</h3>
-<p>Content</p>
+<ol type="1">
+<li><p>Download and run the latest installer with an ‘.exe’ extension from the <a href="https://www.giuspen.com/cherrytree/#downl">downloads webpage</a>.</p></li>
+<li><p>Select a language and click ‘Next’.<br />
+<img src="src/images/wininstall1.png" /></p></li>
+<li><p>Accept the license and click ‘Next’.<br />
+<img src="src/images/wininstall2.png" /></p></li>
+<li><p>Select a directory for the application to be installed and click ‘Next’.<br />
+<img src="src/images/wininstall3.png" /></p></li>
+<li><p>Select ‘Create a desktop shortcut’ if you wish to have a shortcut. Click ‘Next’.<br />
+<img src="src/images/wininstall4.png" /></p></li>
+<li><p>Click ‘Finish’ to complete the installation.<br />
+<img src="src/images/wininstall5.png" /></p></li>
+</ol>
+<p><strong>Note:</strong> If you have a previous version of Cherrytree installed, an error may occur when trying to overwrite “dbus-daemon.exe”. If so, please skip the overwrite and reboot, then try again.</p>
 <hr />
 <h1 id="quickstart">Quickstart</h1>
 <p>Content</p>
@@ -159,7 +202,97 @@ TODO Add new content as needed
 <p><strong>Toolbar</strong> content</p>
 <h3 id="tables">Tables</h3>
 <h3 id="codebox">Codebox</h3>
-<p>Can be executed</p>
+<p>content</p>
+<p><strong>The following Codebox formats are available:</strong></p>
+<ul>
+<li>ada</li>
+<li>asp</li>
+<li>awk</li>
+<li>bibtex</li>
+<li>boo</li>
+<li>c</li>
+<li>c-sharp</li>
+<li>cg</li>
+<li>changelog</li>
+<li>chdr</li>
+<li>clisp</li>
+<li>cmake</li>
+<li>cpp</li>
+<li>css</li>
+<li>d</li>
+<li>desktop</li>
+<li>diff</li>
+<li>docbook</li>
+<li>dosbatch</li>
+<li>dot</li>
+<li>dpatch</li>
+<li>dtd</li>
+<li>eiffel</li>
+<li>erlang</li>
+<li>fcl</li>
+<li>forth</li>
+<li>fortran</li>
+<li>fsharp</li>
+<li>gap</li>
+<li>gettext-translation</li>
+<li>glsl</li>
+<li>go</li>
+<li>groovy</li>
+<li>gtk-doc</li>
+<li>haddock</li>
+<li>haskell</li>
+<li>haskell-literate</li>
+<li>html</li>
+<li>idl</li>
+<li>ini</li>
+<li>java</li>
+<li>js</li>
+<li>latex</li>
+<li>libtool</li>
+<li>lua</li>
+<li>m4</li>
+<li>makefile</li>
+<li>mallard</li>
+<li>markdown</li>
+<li>markdown-extra</li>
+<li>msil</li>
+<li>nemerle</li>
+<li>nisi</li>
+<li>objc</li>
+<li>objective-caml</li>
+<li>ocl</li>
+<li>octave</li>
+<li>ooc</li>
+<li>pascal</li>
+<li>perl</li>
+<li>php</li>
+<li>pkgconfig</li>
+<li>powershell</li>
+<li>prolog</li>
+<li>python</li>
+<li>python3</li>
+<li>r</li>
+<li>rpmspec</li>
+<li>ruby</li>
+<li>rust</li>
+<li>scala</li>
+<li>scheme</li>
+<li>sh</li>
+<li>sparql</li>
+<li>sql</li>
+<li>t2t</li>
+<li>tcl</li>
+<li>texinfo</li>
+<li>vala</li>
+<li>vbnet</li>
+<li>verilog</li>
+<li>vhdl</li>
+<li>xml</li>
+<li>xslt</li>
+<li>yacc</li>
+<li>yaml</li>
+</ul>
+<p><strong>Executing</strong></p>
 <h3 id="files">Files</h3>
 <p>Content</p>
 <h3 id="links">Links</h3>
