improved installation section began the get involved section

--- a/web-test.html
+++ b/web-test.html
@@ -97,12 +97,14 @@ TODO Add new content as needed
 <hr />
 <h1 id="introduction">Introduction</h1>
 <p>Cherrytree is a free and open source, hierarchical, note-taking application. It is capable of storing text, images, files, links, tables, and executable snippets of code. This application is under active development. Details regarding updates can be found in the <a href="https://github.com/giuspen/cherrytree/blob/master/changelog.txt">changelog</a>.</p>
+<p>If you have questions please ask in the <a href="https://www.giuspen.com/forum/cherrytree-2/">forum</a>, or visit <a href="https://www.giuspen.com/feedback/">this webpage</a> to provide feedback.</p>
 <h3 id="about-this-manual">About This Manual</h3>
 <p>This manual was written for Cherrytree version 0.38.6. Please check the <a href="http://www.giuspen.com/cherrytree/">Cherrytree website</a> for the latest version.</p>
 <h3 id="get-involved">Get Involved</h3>
-<p><strong>Developers</strong></p>
+<p>New contributors are welcome!</p>
+<p><strong>Development</strong></p>
 <p>The git repository can be found <a href="https://github.com/giuspen/cherrytree">here</a>.</p>
-<p>The current version requires:</p>
+<p>The current version of Cherrytree requires:</p>
 <ul>
 <li>python2</li>
 <li>python-gtk2</li>
@@ -113,12 +115,16 @@ TODO Add new content as needed
 <li>python-chardet</li>
 </ul>
 <p>After cloning, run in the top folder ./cherrytree or python2 cherrytree.</p>
-<p>Development is currently focused on porting from Python to C++/GTKmm, on the master branch within the ‘future’ directory. The latest, stable python release can also be found on the master branch. The pygi branch is a discontinued attempt to port to the python bindings for GTK3. It failed due to python-gtksourceview2 being deprecated. Please port to PyGI.</p>
-<p><strong>Writers</strong></p>
-<p><strong>Translators</strong></p>
+<p>Development is currently focused on porting from Python to C++/GTKmm. These changes are located on the master branch within the <a href="https://github.com/giuspen/cherrytree/tree/master/future">‘future’ directory</a>. The latest, stable release can also be found on the master branch. The pygi branch is a discontinued attempt to port to the python bindings for GTK3. It failed due to python-gtksourceview2 being deprecated.</p>
+<p><strong>Testing</strong></p>
+<p>If you find a bug, please check to see if it has already been reported within the project’s index of <a href="https://github.com/giuspen/cherrytree/issues">issues</a>. If the error is unreported, please create a new issue providing as much detail as possible.</p>
+<p>If needed, here is a short guide on <a href="https://medium.com/nycplanninglabs/writing-a-proper-github-issue-97427d62a20f">writing a proper GitHub issue</a>.</p>
+<p><strong>Writing</strong></p>
+<p>The Cherrytree user manual is currently under revision and is maintained <a href="https://github.com/EllieBorden/Cherrytree-Manual">here</a>.</p>
+<p><strong>Translation</strong></p>
 <p><strong>Donations</strong></p>
+<p>Join the <a href="#supporters">Cherrytree Supporters</a>!</p>
 <p>Donations are appreciated and can be made from the <a href="https://www.giuspen.com/cherrytree/#text-3">Cherrytree homepage</a>.</p>
-<p><a href="#supporters">Cherrytree Supporters</a></p>
 <hr />
 <h1 id="installation">Installation</h1>
 <p>Cherrytree is available for Linux and Windows.</p>
@@ -149,10 +155,12 @@ TODO Add new content as needed
 <img src="src/images/wininstall3.png" /></p></li>
 <li><p>Select ‘Create a desktop shortcut’ if you wish to have a shortcut. Click ‘Next’.<br />
 <img src="src/images/wininstall4.png" /></p></li>
-<li><p>Click ‘Finish’ to complete the installation.<br />
+<li><p>Review then provided summary, then click ‘Install’ if you are ready to proceed.<br />
 <img src="src/images/wininstall5.png" /></p></li>
+<li><p>Click ‘Finish’ to complete the installation.<br />
+<img src="src/images/wininstall6.png" /></p></li>
 </ol>
-<p><strong>Note:</strong> If you have a previous version of Cherrytree installed, an error may occur when trying to overwrite “dbus-daemon.exe”. If so, please skip the overwrite and reboot, then try again.</p>
+<p><strong>Note:</strong> If you have a previous version of Cherrytree installed, an error may occur when trying to overwrite “dbus-daemon.exe”. If so, please skip the overwrite and restart your computer, then try again.</p>
 <hr />
 <h1 id="quickstart">Quickstart</h1>
 <p>Content</p>
@@ -535,7 +543,7 @@ TODO Add new content as needed
 <li>Mark Kasper donated €7,25</li>
 <li>Angus Rose (United Kingdom) donated €7</li>
 <li>Gerard Dubrulle (France) donated €7</li>
-<li>siliconninja donated €7 {individual pages/nodes instead of one document file for cloud syncing}</li>
+<li>Siliconninja donated €7 {individual pages/nodes instead of one document file for cloud syncing}</li>
 <li>Tara Stewart (United States) donated €6</li>
 <li>Thomas Bondois (France) donated €6</li>
 <li>Nick Cross (United Kingdom) donated €5,80</li>
@@ -580,7 +588,7 @@ TODO Add new content as needed
 </ul>
 <hr />
 <h1 id="license">License</h1>
-<p>This program is free software; you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation; either version 3 of the License, or (at your option) any later version.</p>
+<p>This program is free software; you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation; either version 3 of the License or (at your option) any later version.</p>
 <p>This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.</p>
 <p>You should have received a copy of the GNU General Public License along with this program; if not, write to the Free Software Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA.</p>
 </body>
