--- a/cherrytree-user-manual.html
+++ b/cherrytree-user-manual.html
@@ -831,7 +831,7 @@ is located.</p>
 <div class="olist arabic">
 <ol class="arabic" start="1">
 <li>
-<p>Click the “Add Node” button, shown in <a href="#figure-3.2">Figure 3.2</a>. within the menu bar. <a href="#figure-3.3">Figure 3.3</a>.<br></p>
+<p>Click the “Add Node” button, shown in <a href="#figure-3.2">Figure 3.2</a>. within the menu bar.<br></p>
 <div id="figure-3.2" class="paragraph">
 <div class="title"><strong>Figure 3.2</strong></div>
 <p><span class="image"><img src="images/icons/tree-node-add.png" alt="Tree Node Add"></span></p>
@@ -2110,7 +2110,7 @@ Public License for more details.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2018-10-18 20:46:07 Eastern Daylight Time
+Last updated 2018-10-19 10:46:09 Eastern Daylight Time
 </div>
 </div>
 </body>
