--- a/cherrytree-user-manual.html
+++ b/cherrytree-user-manual.html
@@ -431,13 +431,13 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 @media amzn-kf8{#header,#content,#footnotes,#footer{padding:0}}
 </style>
 </head>
-<body class="book">
+<body class="book toc2 toc-left">
 <div id="header">
 <h1><span class="image"><img src="images/icons/cherrytree.png" alt="Cherrytree"></span> Cherrytree User Manual</h1>
 <div class="details">
 <span id="author" class="author">v0.38.6, 2018</span><br>
 </div>
-<div id="toc" class="toc">
+<div id="toc" class="toc2">
 <div id="toctitle">Table of Contents</div>
 <ul class="sectlevel1">
 <li><a href="#_introduction">Introduction</a>
@@ -2110,7 +2110,7 @@ Public License for more details.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2018-10-19 10:46:09 Eastern Daylight Time
+Last updated 2018-10-19 13:46:18 Eastern Daylight Time
 </div>
 </div>
 </body>
