--- a/cherrytree-user-manual.html
+++ b/cherrytree-user-manual.html
@@ -513,7 +513,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div class="sect2">
 <h3 id="_about_this_manual">About This Manual</h3>
 <div class="paragraph">
-<p>This manual was written for Cherrytree version 0.38.6. Please check the <a href="http://www.giuspen.com/cherrytree/">website</a> for the latest version.</p>
+<p>This manual was written for Cherrytree version 0.38.6. Please check the <a href="http://giuspen.com/cherrytreemanual">website</a> for the latest version.</p>
 </div>
 </div>
 <div class="sect2">
@@ -559,7 +559,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <p>After cloning, run in the top folder ./cherrytree or python2 cherrytree.</p>
 </div>
 <div class="paragraph">
-<p>Development is currently focused on porting from Python to C++/GTKmm. These changes are located on the master branch within the <a href="https://github.com/giuspen/cherrytree/tree/master/future">future directory</a>. The latest, stable release can also be found on the master branch. The pygi branch is a discontinued attempt to port to the python bindings for GTK3. It failed due to python-gtksourceview2 being deprecated.</p>
+<p>Development is currently focused on porting from Python to C++/GTKmm. These changes are located on the master branch within the <a href="https://github.com/giuspen/cherrytree/tree/master/future">future directory</a>. The latest, stable release can also be found on the master branch. The pygi branch is a discontinued attempt to port to the python bindings for GTK3. It failed due to missing pygi bindings for a core clipboard functionality</p>
 </div>
 <div class="paragraph">
 <p>Developers can help by making addressing bugs submitted to the repository’s <a href="https://github.com/giuspen/cherrytree/issues">issues page</a>.</p>
@@ -616,10 +616,10 @@ possible.</p>
 is located.</p>
 </li>
 <li>
-<p>Type the following command, replacing “cherrytree.rpm” with the name of your installation file: <code>sudo rpm -Uvh --force cherrytree.rpm</code>. Provide your password when prompted to begin the installation, as shown in <a href="#figure-2.1">Figure 2.1</a> .<br></p>
-<div id="figure-2.1" class="paragraph">
-<div class="title"><strong>Figure 2.1:</strong> Red Hat installation steps.</div>
-<p><span class="image"><img src="images/rhinstall.png" alt="Red Hat installation steps."></span></p>
+<p>Type the following command, replacing “cherrytree.rpm” with the name of your installation file: <code>sudo rpm -Uvh --force cherrytree.rpm</code>. Provide your password when prompted to begin the installation, as shown in <a href="#figure-2.01">Figure 2.01</a> .<br></p>
+<div id="figure-2.01" class="paragraph">
+<div class="title">Figure 2.01</div>
+<p><span class="image"><img src="images/rhinstall01.png" alt="Red Hat installation steps."></span></p>
 </div>
 </li>
 </ol>
@@ -628,14 +628,67 @@ is located.</p>
 <div class="sect2">
 <h3 id="_installing_on_ubuntu_and_other_debian_derivatives">Installing on Ubuntu and other Debian derivatives</h3>
 <div class="paragraph">
+<p>Cherrytree can be installed to Ubuntu via the "Ubuntu Software" application or the command line.</p>
+</div>
+<div class="paragraph">
 <p><strong>Option One: Ubuntu Software</strong></p>
 </div>
 <div class="paragraph">
-<p>Cherrytree can be found in the Ubuntu Software library. Open Ubuntu Software and search for Cherrytree, then select the application and click the ‘install’ button. Provide your password when prompted to begin the installation. <a href="#figure-2.2">Figure 2.2</a><br></p>
+<p>A PPA (Personal Package Archive) must be added to ensure that the latest version of Cherrytree is installed through Ubuntu Software.</p>
 </div>
-<div id="figure-2.2" class="paragraph">
-<div class="title"><strong>Figure 2.2:</strong> Ubuntu installation steps.</div>
-<p><span class="image"><img src="images/ubuntuinstall.png" alt="Ubuntu installation steps."></span></p>
+<div class="olist arabic">
+<ol class="arabic" start="1">
+<li>
+<p>Open the "Software and Updates" application. <a href="#figure-2.02">Figure 2.02</a><br></p>
+<div id="figure-2.02" class="paragraph">
+<div class="title">Figure 2.02</div>
+<p><span class="image"><img src="images/ubuntuinstall01.png" alt="Software and Updates."></span></p>
+</div>
+</li>
+<li>
+<p>Navigate to the "Other Software" tab and click the "Add" button. <a href="#figure-2.03">Figure 2.03</a><br></p>
+<div id="figure-2.03" class="paragraph">
+<div class="title">Figure 2.03</div>
+<p><span class="image"><img src="images/ubuntuinstall02.png" alt="Software and Updates" width="Other Software."></span></p>
+</div>
+</li>
+<li>
+<p>Paste the following snippet <code>ppa:giuspen/ppa</code> into the textbox, then click the "Add Source" button and enter your password when prompted. <a href="#figure-2.04">Figure 2.04</a><br></p>
+<div id="figure-2.04" class="paragraph">
+<div class="title">Figure 2.04</div>
+<p><span class="image"><img src="images/ubuntuinstall03.png" alt="Add a PPA."></span></p>
+</div>
+</li>
+<li>
+<p>Confirm that the PPA has been added, then close the window. <a href="#figure-2.05">Figure 2.05</a><br></p>
+<div id="figure-2.05" class="paragraph">
+<div class="title">Figure 2.05</div>
+<p><span class="image"><img src="images/ubuntuinstall04.png" alt="Software and Updates" width="Other Software."></span></p>
+</div>
+</li>
+<li>
+<p>When prompted, click the "Reload" button and enter your password when prompted to install updates from the newly added source. <a href="#figure-2.06">Figure 2.06</a><br></p>
+<div id="figure-2.06" class="paragraph">
+<div class="title">Figure 2.06</div>
+<p><span class="image"><img src="images/ubuntuinstall05.png" alt="Reload Sources."></span></p>
+</div>
+</li>
+<li>
+<p>Open Ubuntu Software and search for Cherrytree, then select the application and click the  "Install" button. Provide your password when prompted to begin the installation. <a href="#figure-2.07">Figure 2.07</a><br></p>
+<div id="figure-2.07" class="paragraph">
+<div class="title">Figure 2.07</div>
+<p><span class="image"><img src="images/ubuntuinstall06.png" alt="Ubuntu Software" width="Cherrytree installation."></span></p>
+</div>
+</li>
+<li>
+<p>After the application is installed, click "Launch" and confirm that the latest version is installed." <a href="#figure-2.08">Figure 2.08</a><br>
+Reference the <a href="https://github.com/giuspen/cherrytree/blob/master/changelog.txt">changelog</a> to determine the latest version.<br></p>
+<div id="figure-2.08" class="paragraph">
+<div class="title">Figure 2.08</div>
+<p><span class="image"><img src="images/ubuntuinstall07.png" alt="Cherrytree Version."></span></p>
+</div>
+</li>
+</ol>
 </div>
 <div class="paragraph">
 <p><strong>Option Two: Command Line</strong></p>
@@ -649,10 +702,10 @@ is located.</p>
 <p>Open a terminal and navigate to the directory where your installer is located.</p>
 </li>
 <li>
-<p>Type the following command, replacing “cherrytree.deb” with the name of your installation file: <code>sudo dpkg -i cherrytree.deb</code>. Provide your password when prompted to begin the installation. <a href="#figure-2.3">Figure 2.3</a><br></p>
-<div id="figure-2.3" class="paragraph">
-<div class="title"><strong>Figure 2.3:</strong> Debian installation steps.</div>
-<p><span class="image"><img src="images/debinstall.png" alt="Debian installation steps."></span></p>
+<p>Type the following command, replacing “cherrytree.deb” with the name of your installation file: <code>sudo dpkg -i cherrytree.deb</code>. Provide your password when prompted to begin the installation. <a href="#figure-2.09">Figure 2.09</a><br></p>
+<div id="figure-2.09" class="paragraph">
+<div class="title">Figure 2.09</div>
+<p><span class="image"><img src="images/debinstall01.png" alt="Debian installation steps."></span></p>
 </div>
 </li>
 </ol>
@@ -666,45 +719,45 @@ is located.</p>
 <p>Download and run the latest installer with an ‘.exe’ extension from <a href="https://www.giuspen.com/cherrytree/#downl">downloads webpage</a>.</p>
 </li>
 <li>
-<p>Select a language and click the ‘Next’ button. <a href="#figure-2.4">Figure 2.4</a><br></p>
-<div id="figure-2.4" class="paragraph">
-<div class="title"><strong>Figure 2.4</strong></div>
-<p><span class="image"><img src="images/wininstall1.png" alt="Select a language."></span></p>
+<p>Select a language and click the ‘Next’ button. <a href="#figure-2.10">Figure 2.10</a><br></p>
+<div id="figure-2.10" class="paragraph">
+<div class="title">Figure 2.10</div>
+<p><span class="image"><img src="images/wininstall01.png" alt="Select a language."></span></p>
 </div>
 </li>
 <li>
-<p>Accept the license, then click the ‘Next’ button. <a href="#figure-2.5">Figure 2.5</a><br></p>
-<div id="figure-2.5" class="paragraph">
-<div class="title"><strong>Figure 2.5</strong></div>
-<p><span class="image"><img src="images/wininstall2.png" alt="Accept the license."></span></p>
+<p>Accept the license, then click the ‘Next’ button. <a href="#figure-2.11">Figure 2.11</a><br></p>
+<div id="figure-2.11" class="paragraph">
+<div class="title">Figure 2.11</div>
+<p><span class="image"><img src="images/wininstall02.png" alt="Accept the license."></span></p>
 </div>
 </li>
 <li>
-<p>Select a directory for the application to be installed and click the ‘Next’ button. <a href="#figure-2.6">Figure 2.6</a><br></p>
-<div id="figure-2.6" class="paragraph">
-<div class="title"><strong>Figure 2.6</strong></div>
-<p><span class="image"><img src="images/wininstall3.png" alt="Select a directory for the application to be installed."></span></p>
+<p>Select a directory for the application to be installed and click the ‘Next’ button. <a href="#figure-2.12">Figure 2.12</a><br></p>
+<div id="figure-2.12" class="paragraph">
+<div class="title">Figure 2.12</div>
+<p><span class="image"><img src="images/wininstall03.png" alt="Select a directory for the application to be installed."></span></p>
 </div>
 </li>
 <li>
-<p>Select ‘Create a desktop shortcut’ if you wish to have a shortcut. Click the ‘Next’ button. <a href="#figure-2.7">Figure 2.7</a><br></p>
-<div id="figure-2.7" class="paragraph">
-<div class="title"><strong>Figure 2.7</strong></div>
-<p><span class="image"><img src="images/wininstall4.png" alt="Select 'Create a desktop shortcut' if you wish to have a shortcut."></span></p>
+<p>Select ‘Create a desktop shortcut’ if you wish to have a shortcut. Click the ‘Next’ button. <a href="#figure-2.13">Figure 2.13</a><br></p>
+<div id="figure-2.13" class="paragraph">
+<div class="title">Figure 2.13</div>
+<p><span class="image"><img src="images/wininstall04.png" alt="Select 'Create a desktop shortcut' if you wish to have a shortcut."></span></p>
 </div>
 </li>
 <li>
-<p>Review the provided summary, then click ‘Install’ if you are ready to proceed. <a href="#figure-2.8">Figure 2.8</a><br></p>
-<div id="figure-2.8" class="paragraph">
-<div class="title"><strong>Figure 2.8</strong></div>
-<p><span class="image"><img src="images/wininstall5.png" alt="Review the provided summary."></span></p>
+<p>Review the provided summary, then click ‘Install’ if you are ready to proceed. <a href="#figure-2.14">Figure 2.14</a><br></p>
+<div id="figure-2.14" class="paragraph">
+<div class="title">Figure 2.14</div>
+<p><span class="image"><img src="images/wininstall05.png" alt="Review the provided summary."></span></p>
 </div>
 </li>
 <li>
-<p>Click ‘Finish’ to complete the installation. <a href="#figure-2.9">Figure 2.9</a><br></p>
-<div id="figure-2.9" class="paragraph">
-<div class="title"><strong>Figure 2.9</strong></div>
-<p><span class="image"><img src="images/wininstall6.png" alt="Click 'Finish' to complete the installation."></span></p>
+<p>Click ‘Finish’ to complete the installation. <a href="#figure-2.15">Figure 2.15</a><br></p>
+<div id="figure-2.15" class="paragraph">
+<div class="title">Figure 2.15</div>
+<p><span class="image"><img src="images/wininstall06.png" alt="Click 'Finish' to complete the installation."></span></p>
 </div>
 </li>
 </ol>
@@ -746,10 +799,10 @@ is located.</p>
 <div class="sect2">
 <h3 id="_interface">Interface</h3>
 <div class="paragraph">
-<p>Cherrytree’s interface is made of four sections. These sections are highlighted in <a href="#figure-3.1">Figure 3.1</a>:</p>
+<p>Cherrytree’s interface is made of four sections. These sections are highlighted in <a href="#figure-3.01">Figure 3.01</a>:</p>
 </div>
-<div id="figure-3.1" class="paragraph">
-<div class="title"><strong>Figure 3.1:</strong> Cherrytree interface.</div>
+<div id="figure-3.01" class="paragraph">
+<div class="title">Figure 3.01</div>
 <p><span class="image"><img src="images/interface.png" alt="Cherrytree interface."></span></p>
 </div>
 <div class="paragraph">
@@ -761,34 +814,34 @@ is located.</p>
 <div class="ulist">
 <ul>
 <li>
-<p>File - Document-management features such as opening, saving, printing, and exporting.</p>
+<p><strong>File</strong> - Document-management features such as opening, saving, printing, and exporting.</p>
 </li>
 <li>
-<p>Edit - Application preferences, basic copy and paste features, and object insertion features.</p>
+<p><strong>Edit</strong> - Application preferences, basic copy and paste features, and object insertion features.</p>
 </li>
 <li>
-<p>Formatting - Text formatting options.</p>
+<p><strong>Formatting</strong> - Text formatting options.</p>
 </li>
 <li>
-<p>Tree - Node management features.</p>
+<p><strong>Tree</strong> - Node management features.</p>
 </li>
 <li>
-<p>Search - Features for search and replace.</p>
+<p><strong>Search</strong> - Features for search and replace.</p>
 </li>
 <li>
-<p>View - Interface options.</p>
+<p><strong>View</strong> - Interface options.</p>
 </li>
 <li>
-<p>Bookmarks - Bookmarks will be listed in this menu. You can add bookmarks by right-clicking a node within the tree view and selecting the “Add to Bookmarks” option.</p>
+<p><strong>Bookmarks</strong> - Bookmarks will be listed in this menu. You can add bookmarks by right-clicking a node within the tree view and selecting the “Add to Bookmarks” option.</p>
 </li>
 <li>
-<p>Import - Cherrytree can import from a variety of sources including KeepNote, NoteCase, Tomboy, HTML files, others.</p>
+<p><strong>Import</strong> - Cherrytree can import from a variety of sources including KeepNote, NoteCase, Tomboy, HTML files, others.</p>
 </li>
 <li>
-<p>Export - Cherrytree documents can be exported to HTML, PDF, and Plain Text.</p>
+<p><strong>Export</strong> - Cherrytree documents can be exported to HTML, PDF, and Plain Text.</p>
 </li>
 <li>
-<p>Help - Contains “Check for updates”, an “About” section, and a link to the online manual."</p>
+<p><strong>Help</strong> - Contains “Check for updates”, an “About” section, and a link to the online manual."</p>
 </li>
 </ul>
 </div>
@@ -802,7 +855,7 @@ is located.</p>
 <p>The toolbar can be edited by clicking “Edit” within the menu bar and navigating to “Preferences &gt; Toolbar”</p>
 </div>
 <div class="paragraph">
-<p>The size of the toolbar icons has been increased within the image above. Icon size can be changed by clicking “View” in the menu bar, then selecting the “Increase Toolbar Icon Size” option for bigger icons or “Decrease Toolbar Icon Size” for smaller icons.</p>
+<p>The size of the toolbar icons has been increased within <a href="#figure-3.01">Figure 3.01</a>. Icon size can be changed by clicking “View” in the menu bar, then selecting the “Increase Toolbar Icon Size” option for bigger icons or “Decrease Toolbar Icon Size” for smaller icons.</p>
 </div>
 <div class="paragraph">
 <p><strong>Tree View (Green)</strong></p>
@@ -831,16 +884,16 @@ is located.</p>
 <div class="olist arabic">
 <ol class="arabic" start="1">
 <li>
-<p>Click the “Add Node” button, shown in <a href="#figure-3.2">Figure 3.2</a>. within the menu bar.<br></p>
-<div id="figure-3.2" class="paragraph">
-<div class="title"><strong>Figure 3.2</strong></div>
+<p>Click the “Add Node” button, shown in <a href="#figure-3.02">Figure 3.02</a>. within the menu bar.<br></p>
+<div id="figure-3.02" class="paragraph">
+<div class="title">Figure 3.02</div>
 <p><span class="image"><img src="images/icons/tree-node-add.png" alt="Tree Node Add"></span></p>
 </div>
 </li>
 <li>
-<p>Within the <em>New Node Properties</em> menu, shown in <a href="#figure-3.3">Figure 3.3</a> give your node a name and select a node type, then click the “OK” button. If you’re unsure which node type to use, please view the <a href="#choosing-a-node-type">node type section</a> of this manual.<br></p>
-<div id="figure-3.3" class="paragraph">
-<div class="title"><strong>Figure 3.3</strong></div>
+<p>Within the <em>New Node Properties</em> menu, shown in <a href="#figure-3.03">Figure 3.03</a> give your node a name and select a node type, then click the “OK” button. If you’re unsure which node type to use, please view the <a href="#choosing-a-node-type">node type section</a> of this manual.<br></p>
+<div id="figure-3.03" class="paragraph">
+<div class="title">Figure 3.03</div>
 <p><span class="image"><img src="images/newnode.png" alt="New node properties."></span></p>
 </div>
 </li>
@@ -850,10 +903,10 @@ is located.</p>
 <p><strong>Node Menu</strong></p>
 </div>
 <div class="paragraph">
-<p>Right-click a node to display a menu of the options available to it. <a href="#figure-3.4">Figure 3.4</a><br></p>
+<p>Right-click a node to display a menu of the options available to it. <a href="#figure-3.04">Figure 3.04</a><br></p>
 </div>
-<div id="figure-3.4" class="paragraph">
-<div class="title"><strong>Figure 3.4:</strong> Node options.</div>
+<div id="figure-3.04" class="paragraph">
+<div class="title">Figure 3.04</div>
 <p><span class="image"><img src="images/treemenu.png" alt="Tree menu."></span></p>
 </div>
 </div>
@@ -1335,61 +1388,61 @@ Click and hold the divider between the tree view and editor, then drag the mouse
 <div class="ulist">
 <ul>
 <li>
-<p>Pavel Fric (Czech)</p>
+<p>Armenian (Seda Stamboltsyan, up to date)</p>
 </li>
 <li>
-<p>Vincenzo Reale (Italian)</p>
+<p>Chinese Simplified (Channing Wong, TO BE UPDATED)</p>
 </li>
 <li>
-<p>Klaus Becker (French)</p>
+<p>Czech (Pavel Fric, up to date)</p>
 </li>
 <li>
-<p>Frank Brungräber (German)</p>
+<p>Dutch (Luuk Geurts, up to date)</p>
 </li>
 <li>
-<p>Giuseppe Penone (Italian)</p>
+<p>English (default)</p>
 </li>
 <li>
-<p>Marcin Swierczynski (Polish)</p>
+<p>French (Klaus Becker, up to date)</p>
 </li>
 <li>
-<p>Andriy Kovtun (Russian, Ukrainian)</p>
+<p>Finnish (Henri Kaustinen, up to date)</p>
 </li>
 <li>
-<p>Daniel MC (Spanish)</p>
+<p>German (Frank Brungräber, up to date)</p>
 </li>
 <li>
-<p>Channing Wong (Chinese Simplified)</p>
+<p>Greek (Delphina, up to date)</p>
 </li>
 <li>
-<p>Vinicius Schmidt (Brazilian Portuguese)</p>
+<p>Italian (Vincenzo Reale, up to date)</p>
 </li>
 <li>
-<p>Patrick Vijgeboom (Dutch)</p>
+<p>Japanese (Piyo, up to date)</p>
 </li>
 <li>
-<p>Luuk Geurts (Dutch)</p>
+<p>Lithuanian (Zygis, TO BE UPDATED)</p>
 </li>
 <li>
-<p>Seda Stamboltsyan (Armenian)</p>
+<p>Polish (Marcin Swierczynski, up to date)</p>
 </li>
 <li>
-<p>Ferhat Aydin (Turkish)</p>
+<p>Portuguese Brazil (TO BE UPDATED)</p>
 </li>
 <li>
-<p>Piyo (Japanese)</p>
+<p>Russian (Andriy Kovtun, up to date)</p>
 </li>
 <li>
-<p>Zygis (Lithuanian)</p>
+<p>Slovenian (Erik Lovrič, up to date)</p>
 </li>
 <li>
-<p>Henri Kaustinen (Finnish)</p>
+<p>Spanish (Daniel MC, up to date)</p>
 </li>
 <li>
-<p>Delphina (Greek)</p>
+<p>Turkish (Ferhat Aydin, TO BE UPDATED)</p>
 </li>
 <li>
-<p>Erik Lovrič (Slovenian)</p>
+<p>Ukrainian (Andriy Kovtun, up to date)</p>
 </li>
 </ul>
 </div>
@@ -2110,7 +2163,7 @@ Public License for more details.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2018-10-19 13:46:18 Eastern Daylight Time
+Last updated 2018-10-20 15:53:14 Eastern Daylight Time
 </div>
 </div>
 </body>
