added preference images

--- a/cherrytree-user-manual.html
+++ b/cherrytree-user-manual.html
@@ -493,7 +493,21 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </ul>
 </li>
 <li><a href="#_searching">Searching</a></li>
-<li><a href="#_settings">Settings</a></li>
+<li><a href="#_settings">Settings</a>
+<ul class="sectlevel2">
+<li><a href="#_text_and_code">Text and Code</a></li>
+<li><a href="#_text_2">Text</a></li>
+<li><a href="#_rich_text">Rich Text</a></li>
+<li><a href="#_plain_text_and_code">Plain Text and Code</a></li>
+<li><a href="#_tree_1">Tree 1</a></li>
+<li><a href="#_tree_2">Tree 2</a></li>
+<li><a href="#_fonts">Fonts</a></li>
+<li><a href="#_links_2">Links</a></li>
+<li><a href="#_toolbar">Toolbar</a></li>
+<li><a href="#_keyboard_shortcuts">Keyboard Shortcuts</a></li>
+<li><a href="#_miscellaneous">Miscellaneous</a></li>
+</ul>
+</li>
 <li><a href="#_contributors">Contributors</a></li>
 <li><a href="#_supporters">Supporters</a></li>
 <li><a href="#_license">License</a></li>
@@ -1355,8 +1369,82 @@ Click and hold the divider between the tree view and editor, then drag the mouse
 <div class="sect1">
 <h2 id="_settings">Settings</h2>
 <div class="sectionbody">
-<div class="paragraph">
-<p>Content</p>
+<div class="sect2">
+<h3 id="_text_and_code">Text and Code</h3>
+<div id="figure-9.01" class="paragraph">
+<div class="title">Figure 9.01</div>
+<p><span class="image"><img src="images/pref01.png" alt="Text and Code."></span></p>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_text_2">Text</h3>
+<div id="figure-9.02" class="paragraph">
+<div class="title">Figure 9.02</div>
+<p><span class="image"><img src="images/pref02.png" alt="Text."></span></p>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_rich_text">Rich Text</h3>
+<div id="figure-9.03" class="paragraph">
+<div class="title">Figure 9.03</div>
+<p><span class="image"><img src="images/pref03.png" alt="Rich Text."></span></p>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_plain_text_and_code">Plain Text and Code</h3>
+<div id="figure-9.04" class="paragraph">
+<div class="title">Figure 9.04</div>
+<p><span class="image"><img src="images/pref04.png" alt="Plain Text and Code."></span></p>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_tree_1">Tree 1</h3>
+<div id="figure-9.05" class="paragraph">
+<div class="title">Figure 9.05</div>
+<p><span class="image"><img src="images/pref05.png" alt="Tree 1."></span></p>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_tree_2">Tree 2</h3>
+<div id="figure-9.06" class="paragraph">
+<div class="title">Figure 9.06</div>
+<p><span class="image"><img src="images/pref06.png" alt="Tree 2."></span></p>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_fonts">Fonts</h3>
+<div id="figure-9.07" class="paragraph">
+<div class="title">Figure 9.07</div>
+<p><span class="image"><img src="images/pref07.png" alt="Fonts."></span></p>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_links_2">Links</h3>
+<div id="figure-9.08" class="paragraph">
+<div class="title">Figure 9.08</div>
+<p><span class="image"><img src="images/pref08.png" alt="Links."></span></p>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_toolbar">Toolbar</h3>
+<div id="figure-9.09" class="paragraph">
+<div class="title">Figure 9.09</div>
+<p><span class="image"><img src="images/pref09.png" alt="Toolbar."></span></p>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_keyboard_shortcuts">Keyboard Shortcuts</h3>
+<div id="figure-9.10" class="paragraph">
+<div class="title">Figure 9.10</div>
+<p><span class="image"><img src="images/pref10.png" alt="Keyboard Shortcuts."></span></p>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_miscellaneous">Miscellaneous</h3>
+<div id="figure-9.11" class="paragraph">
+<div class="title">Figure 9.11</div>
+<p><span class="image"><img src="images/pref11.png" alt="Miscellaneous."></span></p>
+</div>
 </div>
 </div>
 </div>
@@ -2163,7 +2251,7 @@ Public License for more details.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2018-10-20 16:49:45 Eastern Daylight Time
+Last updated 2018-10-20 17:22:31 Eastern Daylight Time
 </div>
 </div>
 </body>
