--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@ h1{font-size:2.125em}
 h2{font-size:1.6875em}
 h3,#toctitle,.sidebarblock>.content>.title{font-size:1.375em}
 h4,h5{font-size:1.125em}
+h4{color: #444444; font-weight:500;}
 h6{font-size:1em}
 hr{border:solid #ddddd8;border-width:1px 0 0;clear:both;margin:1.25em 0 1.1875em;height:0}
 em,i{font-style:italic;line-height:inherit}
@@ -105,7 +106,8 @@ blockquote,blockquote p{line-height:1.6;color:rgba(0,0,0,.85)}
 h1{font-size:2.75em}
 h2{font-size:2.3125em}
 h3,#toctitle,.sidebarblock>.content>.title{font-size:1.6875em}
-h4{font-size:1.4375em}}
+h4{font-size:1.2375em}}
+h4{color: #444444; font-weight:600;}
 table{background:#fff;margin-bottom:1.25em;border:solid 1px #dedede}
 table thead,table tfoot{background:#f7f8f7}
 table thead tr th,table thead tr td,table tfoot tr th,table tfoot tr td{padding:.5em .625em .625em;font-size:inherit;color:rgba(0,0,0,.8);text-align:left}
@@ -535,9 +537,8 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div class="paragraph">
 <p>New contributors are welcome! We recommend that you <a href="mailto:giuspen@gmail.com">contact the project&#8217;s maintainer</a> before starting.</p>
 </div>
-<div class="paragraph">
-<p><strong>Development</strong></p>
-</div>
+<div class="sect3">
+<h4 id="_development">Development</h4>
 <div class="paragraph">
 <p>Please visit the git <a href="https://github.com/giuspen/cherrytree">repository</a> to get started.</p>
 </div>
@@ -578,9 +579,9 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div class="paragraph">
 <p>Developers can help by making addressing bugs submitted to the repository’s <a href="https://github.com/giuspen/cherrytree/issues">issues page</a>.</p>
 </div>
-<div class="paragraph">
-<p><strong>Testing</strong></p>
 </div>
+<div class="sect3">
+<h4 id="_testing">Testing</h4>
 <div class="paragraph">
 <p>If you find a bug, please check to see if it has already been reported within the project’s <a href="https://github.com/giuspen/cherrytree/issues">issues</a>. If the error is unreported, please create a new issue providing as much detail as
 possible.</p>
@@ -588,26 +589,27 @@ possible.</p>
 <div class="paragraph">
 <p>If needed, here is a short guide on <a href="https://medium.com/nycplanninglabs/writing-a-proper-github-issue-97427d62a20f">writing a proper GitHub issue</a>.</p>
 </div>
-<div class="paragraph">
-<p><strong>Writing</strong></p>
 </div>
+<div class="sect3">
+<h4 id="_writing">Writing</h4>
 <div class="paragraph">
 <p>The Cherrytree user manual is currently under revision and can be found in the <a href="https://github.com/EllieBorden/Cherrytree-Manual">manual</a>.</p>
 </div>
-<div class="paragraph">
-<p><strong>Translation</strong></p>
 </div>
+<div class="sect3">
+<h4 id="_translation">Translation</h4>
 <div class="paragraph">
 <p>Please contact the project&#8217;s <a href="mailto:giuspen@gmail.com">maintainer</a> to add or edit translations.</p>
 </div>
-<div class="paragraph">
-<p><strong>Donations</strong></p>
 </div>
+<div class="sect3">
+<h4 id="_donations">Donations</h4>
 <div class="paragraph">
 <p>Join the <a href="#supporters">Cherrytree Supporters</a>!</p>
 </div>
 <div class="paragraph">
 <p>Donations are appreciated and can be made from the <a href="https://www.giuspen.com/cherrytree/#text-3">Cherrytree website</a>.</p>
+</div>
 </div>
 </div>
 </div>
@@ -644,9 +646,8 @@ is located.</p>
 <div class="paragraph">
 <p>Cherrytree can be installed to Ubuntu via the "Ubuntu Software" application or the command line.</p>
 </div>
-<div class="paragraph">
-<p><strong>Option One: Ubuntu Software</strong></p>
-</div>
+<div class="sect3">
+<h4 id="_option_one_ubuntu_software">Option One: Ubuntu Software</h4>
 <div class="paragraph">
 <p>A PPA (Personal Package Archive) must be added to ensure that the latest version of Cherrytree is installed through Ubuntu Software.</p>
 </div>
@@ -704,9 +705,9 @@ Reference the <a href="https://github.com/giuspen/cherrytree/blob/master/changel
 </li>
 </ol>
 </div>
-<div class="paragraph">
-<p><strong>Option Two: Command Line</strong></p>
 </div>
+<div class="sect3">
+<h4 id="_option_two_command_line">Option Two: Command Line</h4>
 <div class="olist arabic">
 <ol class="arabic" start="1">
 <li>
@@ -723,6 +724,7 @@ Reference the <a href="https://github.com/giuspen/cherrytree/blob/master/changel
 </div>
 </li>
 </ol>
+</div>
 </div>
 </div>
 <div class="sect2">
@@ -819,9 +821,8 @@ Reference the <a href="https://github.com/giuspen/cherrytree/blob/master/changel
 <div class="title">Figure 3.01</div>
 <p><span class="image"><img src="images/interface.png" alt="Cherrytree interface."></span></p>
 </div>
-<div class="paragraph">
-<p><strong>Menu Bar (Red)</strong></p>
-</div>
+<div class="sect3">
+<h4 id="_menu_bar_red">Menu Bar (Red)</h4>
 <div class="paragraph">
 <p>The menu bar contains the following menus:</p>
 </div>
@@ -859,9 +860,9 @@ Reference the <a href="https://github.com/giuspen/cherrytree/blob/master/changel
 </li>
 </ul>
 </div>
-<div class="paragraph">
-<p><strong>Toolbar (Purple)</strong></p>
 </div>
+<div class="sect3">
+<h4 id="_toolbar_purple">Toolbar (Purple)</h4>
 <div class="paragraph">
 <p>The toolbar has many commonly used options for managing nodes, formatting text, and inserting objects.</p>
 </div>
@@ -871,15 +872,15 @@ Reference the <a href="https://github.com/giuspen/cherrytree/blob/master/changel
 <div class="paragraph">
 <p>The size of the toolbar icons has been increased within <a href="#figure-3.01">Figure 3.01</a>. Icon size can be changed by clicking “View” in the menu bar, then selecting the “Increase Toolbar Icon Size” option for bigger icons or “Decrease Toolbar Icon Size” for smaller icons.</p>
 </div>
-<div class="paragraph">
-<p><strong>Tree View (Green)</strong></p>
 </div>
+<div class="sect3">
+<h4 id="_tree_view_green">Tree View (Green)</h4>
 <div class="paragraph">
 <p>Cherrytree’s tree view shows the document’s hierarchical structure of nodes.</p>
 </div>
-<div class="paragraph">
-<p><strong>Editor (Yellow)</strong></p>
 </div>
+<div class="sect3">
+<h4 id="_editor_yellow">Editor (Yellow)</h4>
 <div class="paragraph">
 <p>The editor is used to read, write, edit, and delete notes. Click and hold the divider between the tree view and editor, then drag the mouse left or right to resize the two windows.</p>
 </div>
@@ -887,14 +888,14 @@ Reference the <a href="https://github.com/giuspen/cherrytree/blob/master/changel
 <p>To change the color scheme for plain text documents and code, click the “Edit” button within the menu bar and navigate to “Preferences &gt; Plain Text and Code,” then adjust the Style Scheme option. To change the color scheme of Rich Text documents, click “Edit”, navigate to “Preferences &gt; Rich Text” and adjust the Theme settings.</p>
 </div>
 </div>
+</div>
 <div class="sect2">
 <h3 id="_node_management">Node Management</h3>
 <div class="paragraph">
 <p>TODO: Introduction Text</p>
 </div>
-<div class="paragraph">
-<p><strong>Creating Your First Node</strong></p>
-</div>
+<div class="sect3">
+<h4 id="_creating_your_first_node">Creating Your First Node</h4>
 <div class="olist arabic">
 <ol class="arabic" start="1">
 <li>
@@ -905,7 +906,7 @@ Reference the <a href="https://github.com/giuspen/cherrytree/blob/master/changel
 </div>
 </li>
 <li>
-<p>Within the <em>New Node Properties</em> menu, shown in <a href="#figure-3.03">Figure 3.03</a> give your node a name and select a node type, then click the “OK” button. If you’re unsure which node type to use, please view the <a href="#choosing-a-node-type">node type section</a> of this manual.<br></p>
+<p>Within the "New Node Properties" menu, shown in <a href="#figure-3.03">Figure 3.03</a> give your node a name and select a node type, then click the “OK” button. If you’re unsure which node type to use, please view the <a href="#_choosing_a_node_type">node type section</a> of this manual.<br></p>
 <div id="figure-3.03" class="paragraph">
 <div class="title">Figure 3.03</div>
 <p><span class="image"><img src="images/newnode.png" alt="New node properties."></span></p>
@@ -913,15 +914,16 @@ Reference the <a href="https://github.com/giuspen/cherrytree/blob/master/changel
 </li>
 </ol>
 </div>
-<div class="paragraph">
-<p><strong>Node Menu</strong></p>
 </div>
+<div class="sect3">
+<h4 id="_node_menu">Node Menu</h4>
 <div class="paragraph">
 <p>Right-click a node to display a menu of the options available to it. <a href="#figure-3.04">Figure 3.04</a><br></p>
 </div>
 <div id="figure-3.04" class="paragraph">
 <div class="title">Figure 3.04</div>
 <p><span class="image"><img src="images/treemenu.png" alt="Tree menu."></span></p>
+</div>
 </div>
 </div>
 <div class="sect2">
