finished quick start section

--- a/index.html
+++ b/index.html
@@ -472,6 +472,13 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <li><a href="#_menu">Menu</a></li>
 </ul>
 </li>
+<li><a href="#_files">Files</a>
+<ul class="sectlevel2">
+<li><a href="#_saving">Saving</a></li>
+<li><a href="#_searching">Searching</a></li>
+<li><a href="#_importing_and_exporting">Importing and Exporting</a></li>
+</ul>
+</li>
 <li><a href="#_nodes">Nodes</a>
 <ul class="sectlevel2">
 <li><a href="#_managing_nodes">Managing Nodes</a></li>
@@ -486,7 +493,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <li><a href="#_images">Images</a></li>
 <li><a href="#_tables">Tables</a></li>
 <li><a href="#_codebox">Codebox</a></li>
-<li><a href="#_files">Files</a></li>
+<li><a href="#_files_2">Files</a></li>
 <li><a href="#_links">Links</a></li>
 <li><a href="#_anchors">Anchors</a></li>
 <li><a href="#_table_of_contents">Table of Contents</a></li>
@@ -494,7 +501,6 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <li><a href="#_special_characters">Special characters</a></li>
 </ul>
 </li>
-<li><a href="#_searching">Searching</a></li>
 <li><a href="#_settings">Settings</a>
 <ul class="sectlevel2">
 <li><a href="#_text_and_code">Text and Code</a></li>
@@ -924,24 +930,135 @@ Reference the <a href="https://github.com/giuspen/cherrytree/blob/master/changel
 <div class="title">Figure 3.04</div>
 <p><span class="image"><img src="images/treemenu.png" alt="Tree menu."></span></p>
 </div>
+<div class="paragraph">
+<p>Commonly used options include:</p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p><strong>Add Node</strong> - Create a node on the same level of hierarchy as your current node.</p>
+</li>
+<li>
+<p><strong>Add SubNode</strong> - Create a child node under the currently selected node.</p>
+</li>
+<li>
+<p><strong>Change Node Properties</strong> - Edit the settings of the current node.</p>
+</li>
+<li>
+<p><strong>Delete Node</strong> - Delete the currently selected node.</p>
+</li>
+</ul>
+</div>
 </div>
 </div>
 <div class="sect2">
 <h3 id="_insert_objects">Insert Objects</h3>
 <div class="paragraph">
-<p>Content</p>
+<p>Objects can be inserted from the menu bar under "Edit", <a href="#figure-3.05">Figure 3.05</a>, or the toolbar, <a href="#figure-3.06">Figure 3.06</a>.</p>
+</div>
+<div id="figure-3.05" class="paragraph">
+<div class="title">Figure 3.05</div>
+<p><span class="image"><img src="images/insert01.png" alt="Insert menu options."></span></p>
+</div>
+<div id="figure-3.06" class="paragraph">
+<div class="title">Figure 3.06</div>
+<p><span class="image"><img src="images/insert02.png" alt="Insert toolbar options."></span></p>
+</div>
+<div class="paragraph">
+<p>The following objects can be inserted into Cherrytree documents:</p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p>Image</p>
+</li>
+<li>
+<p>Table</p>
+</li>
+<li>
+<p>CodeBox</p>
+</li>
+<li>
+<p>File</p>
+</li>
+<li>
+<p>Link</p>
+</li>
+<li>
+<p>Anchor</p>
+</li>
+<li>
+<p>TOC (Table of Contents)</p>
+</li>
+<li>
+<p>Timestamp</p>
+</li>
+<li>
+<p>Special Character</p>
+</li>
+<li>
+<p>Horizontal Rule</p>
+</li>
+</ul>
 </div>
 </div>
 <div class="sect2">
 <h3 id="_save_your_notes">Save Your Notes</h3>
+<div class="olist arabic">
+<ol class="arabic" start="1">
+<li>
+<p>You can save your document by holding "Ctrl" and pressing "s" or clicking "File" within the menu bar and selecting the "Save" option, as shown in <a href="#figure-3.07">Figure 3.07</a>.<br></p>
 <div class="paragraph">
-<p>Content</p>
+<p>If you have previously saved the current document, you do not need to perform anymore steps.<br></p>
+</div>
+<div id="figure-3.07" class="paragraph">
+<div class="title">Figure 3.07</div>
+<p><span class="image"><img src="images/save01.png" alt="File menu" width="save."></span></p>
+</div>
+</li>
+<li>
+<p>If this is your first time saving the current document, you will be prompted to select a save type, as shown in <a href="#figure-3.08">Figure 3.08</a>. If you are unsure which type to select, please visit the <a href="#_saving">save section</a> for more details.<br></p>
+<div id="figure-3.08" class="paragraph">
+<div class="title">Figure 3.08</div>
+<p><span class="image"><img src="images/save02.png" alt="Save type selection menu."></span></p>
+</div>
+</li>
+<li>
+<p>After you have selected a type you will be prompted to give your document a name and select a folder to save it to. <a href="#figure-3.10">Figure 3.10</a><br></p>
+<div id="figure-3.09" class="paragraph">
+<div class="title">Figure 3.09</div>
+<p><span class="image"><img src="images/save03.png" alt="Windows save as menu."></span></p>
+</div>
+</li>
+</ol>
 </div>
 </div>
 <div class="sect2">
 <h3 id="_export_the_document">Export the Document</h3>
-<div class="paragraph">
-<p>Content</p>
+<div class="olist arabic">
+<ol class="arabic" start="1">
+<li>
+<p>To export your document, click "Export" within the menu bar and select a type of document type. <a href="#figure-3.10">Figure 3.10</a><br></p>
+<div id="figure-3.10" class="paragraph">
+<div class="title">Figure 3.10</div>
+<p><span class="image"><img src="images/export01.png" alt="Export menu."></span></p>
+</div>
+</li>
+<li>
+<p>When prompted, select the scope of content to be exported then click the "OK" button. <a href="#figure-3.11">Figure 3.11</a><br></p>
+<div id="figure-3.11" class="paragraph">
+<div class="title">Figure 3.11</div>
+<p><span class="image"><img src="images/export02.png" alt="Export type selection."></span></p>
+</div>
+</li>
+<li>
+<p>After you have selected a type you will be prompted to give your document a name and select a folder to save it to. <a href="#figure-3.12">Figure 3.12</a><br></p>
+<div id="figure-3.12" class="paragraph">
+<div class="title">Figure 3.12</div>
+<p><span class="image"><img src="images/save03.png" alt="Windows save as menu."></span></p>
+</div>
+</li>
+</ol>
 </div>
 </div>
 </div>
@@ -976,6 +1093,23 @@ Click and hold the divider between the tree view and editor, then drag the mouse
 <div class="paragraph">
 <p>Content</p>
 </div>
+</div>
+</div>
+</div>
+<div class="sect1">
+<h2 id="_files">Files</h2>
+<div class="sectionbody">
+<div class="sect2">
+<h3 id="_saving">Saving</h3>
+
+</div>
+<div class="sect2">
+<h3 id="_searching">Searching</h3>
+
+</div>
+<div class="sect2">
+<h3 id="_importing_and_exporting">Importing and Exporting</h3>
+
 </div>
 </div>
 </div>
@@ -1323,7 +1457,7 @@ Click and hold the divider between the tree view and editor, then drag the mouse
 </div>
 </div>
 <div class="sect2">
-<h3 id="_files">Files</h3>
+<h3 id="_files_2">Files</h3>
 <div class="paragraph">
 <p>Content</p>
 </div>
@@ -1357,14 +1491,6 @@ Click and hold the divider between the tree view and editor, then drag the mouse
 <div class="paragraph">
 <p>Content</p>
 </div>
-</div>
-</div>
-</div>
-<div class="sect1">
-<h2 id="_searching">Searching</h2>
-<div class="sectionbody">
-<div class="paragraph">
-<p>Content</p>
 </div>
 </div>
 </div>
@@ -2253,7 +2379,7 @@ Public License for more details.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2018-10-20 18:09:31 Eastern Daylight Time
+Last updated 2018-10-20 20:33:21 Eastern Daylight Time
 </div>
 </div>
 </body>
