changed document structure

--- a/index.html
+++ b/index.html
@@ -464,19 +464,12 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <li><a href="#_export_the_document">Export the Document</a></li>
 </ul>
 </li>
-<li><a href="#_user_interface">User Interface</a>
-<ul class="sectlevel2">
-<li><a href="#_editor">Editor</a></li>
-<li><a href="#_tree_view">Tree View</a></li>
-<li><a href="#_toolbar_icons">Toolbar Icons</a></li>
-<li><a href="#_menu">Menu</a></li>
-</ul>
-</li>
 <li><a href="#_files">Files</a>
 <ul class="sectlevel2">
 <li><a href="#_saving">Saving</a></li>
 <li><a href="#_searching">Searching</a></li>
-<li><a href="#_importing_and_exporting">Importing and Exporting</a></li>
+<li><a href="#_importing">Importing</a></li>
+<li><a href="#_exporting">Exporting</a></li>
 </ul>
 </li>
 <li><a href="#_nodes">Nodes</a>
@@ -484,6 +477,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <li><a href="#_managing_nodes">Managing Nodes</a></li>
 <li><a href="#_choosing_a_node_type">Choosing a Node Type</a></li>
 <li><a href="#_editing_nodes">Editing Nodes</a></li>
+<li><a href="#_bookmarking">Bookmarking</a></li>
 <li><a href="#_deleting_nodes">Deleting Nodes</a></li>
 </ul>
 </li>
@@ -1064,39 +1058,6 @@ Reference the <a href="https://github.com/giuspen/cherrytree/blob/master/changel
 </div>
 </div>
 <div class="sect1">
-<h2 id="_user_interface">User Interface</h2>
-<div class="sectionbody">
-<div class="paragraph">
-<p><strong>Resizing the interface</strong><br>
-Click and hold the divider between the tree view and editor, then drag the mouse left or right to resize the two windows.</p>
-</div>
-<div class="sect2">
-<h3 id="_editor">Editor</h3>
-<div class="paragraph">
-<p>Content</p>
-</div>
-</div>
-<div class="sect2">
-<h3 id="_tree_view">Tree View</h3>
-<div class="paragraph">
-<p>Content</p>
-</div>
-</div>
-<div class="sect2">
-<h3 id="_toolbar_icons">Toolbar Icons</h3>
-<div class="paragraph">
-<p>Icon size can be changed by clicking “View” in the menu bar, then selecting the “Increase Toolbar Icon Size” option for bigger icons or “Decrease Toolbar Icon Size” for smaller icons..</p>
-</div>
-</div>
-<div class="sect2">
-<h3 id="_menu">Menu</h3>
-<div class="paragraph">
-<p>Content</p>
-</div>
-</div>
-</div>
-</div>
-<div class="sect1">
 <h2 id="_files">Files</h2>
 <div class="sectionbody">
 <div class="sect2">
@@ -1108,7 +1069,11 @@ Click and hold the divider between the tree view and editor, then drag the mouse
 
 </div>
 <div class="sect2">
-<h3 id="_importing_and_exporting">Importing and Exporting</h3>
+<h3 id="_importing">Importing</h3>
+
+</div>
+<div class="sect2">
+<h3 id="_exporting">Exporting</h3>
 
 </div>
 </div>
@@ -1141,6 +1106,10 @@ Click and hold the divider between the tree view and editor, then drag the mouse
 <div class="paragraph">
 <p>Content</p>
 </div>
+</div>
+<div class="sect2">
+<h3 id="_bookmarking">Bookmarking</h3>
+
 </div>
 <div class="sect2">
 <h3 id="_deleting_nodes">Deleting Nodes</h3>
@@ -2379,7 +2348,7 @@ Public License for more details.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2018-10-20 20:33:21 Eastern Daylight Time
+Last updated 2018-10-20 21:17:35 Eastern Daylight Time
 </div>
 </div>
 </body>
